# propositional-logic-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
propositional-logic/: Cargo.toml
propositional-logic/src/: lib.rs  macros.rs
src/: lib.rs  macros.rs  main.rs  prelude.rs
