[package]
name = "propositional-logic-rs"
version = "0.1.0"
edition = "2021"
authors = ["Anthony Rubick"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "s"
codegen-units = 1
