[package]
name = "propositional_logic"
version = "0.1.0"
edition = "2021"
authors = ["Anthony Rubick"]
publish = true
description = "generate truth tables for compound propositions"
license = "MIT"
repository = "https://github.com/AnthonyMichaelTDM/propositional-logic-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4"
